fix: 🐛 fix bug and change css for dark mode
fix bug and change css for dark mode

✅ Closes: #92

--- a/src/app/common/components/footer/footer.page.scss
+++ b/src/app/common/components/footer/footer.page.scss
@@ -38,6 +38,7 @@ ion-footer {
   }
   .foot-box-mobile {
     display: block !important;
+    background: var(--white);
   }
   .foot-box {
     display: none;
@@ -81,6 +82,7 @@ ion-footer {
   border-top-right-radius: 16px;
   border-top: solid 1px var(--mercury);
   border-bottom: solid 1px var(--mercury);
+  background-color: var(--white);
 }
 .links-item a {
   color: var(--mine);
